# LMServe

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
api_server/: Cargo.toml  build.rs
api_server/src/: args.rs  lib.rs  main.rs  router.rs
api_server/tests/: test.rs
benchmarks/: README.md  benchmark_server.py  benchmark_server_chat.py  benchmark_utils.py  requirements.txt
benchmarks/generator/: __init__.py  dataset_config.py  generator_utils.py  prepare_dataset.py  request.py  request_generator.py
benchmarks/request/: __init__.py  request.py  request_generator.py
clis/: Cargo.toml
clis/src/: args.rs  configs.rs  lib.rs
configs/: README.md  default.yaml  dist-serve.yaml  multi-level-kv-cache.yaml  tensor-parallel.yaml
gateway/: Cargo.toml
gateway/src/: api_server.rs  lib.rs  main.rs
launcher/: Cargo.toml
launcher/src/: args.rs  main.rs
llmserve/: Cargo.toml  build.rs
llmserve/src/: api_server.rs  args.rs  block_manager.rs  engine.rs  infer_task.rs  lib.rs  llmserve.rs  main.rs  scheduler.rs  sequence.rs  session_manager.rs  stub.rs  utils.rs  worker.rs
proto/: llm.proto  worker.proto
runtime/: Cargo.toml
runtime/llm_engine/: Cargo.toml  build.rs
runtime/llm_engine/src/: block_manager.rs  engine.rs  lib.rs  router.rs  scheduler.rs  stub.rs  worker.rs
runtime/llm_srv/: Cargo.toml  build.rs
runtime/llm_srv/src/: args.rs  main.rs
runtime/src/: background_manager.rs  configs.rs  lib.rs  llm_srv.rs  monitor.rs  router.rs  stats.rs  types.rs
runtime/src/llm_engine/: block_manager.rs  engine.rs  hash.rs  infer_task.rs  mod.rs  outputs.rs  scheduler.rs  sequence.rs  worker.rs
runtime/worker/: Makefile  pyproject.toml
runtime/worker/llm_worker/: __init__.py  cli.py  dist_utils.py  kv_worker.py  model_worker.py  utils.py
runtime/worker/llm_worker/models/: __init__.py  llama.py  opt.py  qwen2.py  sampler.py  utils.py
runtime/worker/llm_worker/models/layers/: activations.py  attention.py  rotary_embedding.py
runtime/worker/llm_worker/models/parallel/: cross_entropy.py  initialize.py  layers.py  random.py  utils.py
runtime/worker/llm_worker/ops/: cache_ops.py  rotary_embedding_ops.py
server/: Cargo.toml
server/src/: block_manager.rs  infer_task.rs  lib.rs  llmserve.rs  scheduler.rs  sequence.rs  tags  utils.rs
utils/: Cargo.toml
utils/src/: collections.rs  lib.rs  logging.rs  random.rs  signal_handler.rs  time.rs  tokenizer.rs
worker/: Makefile  pyproject.toml
worker/llmserve_worker/: __init__.py  cli.py  dist_utils.py  kv_worker.py  model_worker.py
worker/llmserve_worker/models/: __init__.py  attention.py  input_params.py  llama.py  opt.py  qwen2.py  utils.py
worker/llmserve_worker/models/layers/: __init__.py  activations.py  rotary_embedding.py
worker/llmserve_worker/models/ops/: rotary_embedding.py  sample.py
worker/llmserve_worker/models/parallel/: README.md
worker/llmserve_worker/ops/: cache_ops.py  rotary_embedding_ops.py
worker/llmserve_worker/ops/triton/: cache_kernels.py  rotary_embedding.py
