[package]
name = "api_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api_server"
path = "src/main.rs"

[dependencies]
utils = { path = "../utils" }
llmserve = { path = "../llmserve" }
anyhow = "1.0.98"
tokenizers = { version = "0.20", features = ["http"] }
tonic = "0.13"
tokio = { version = "1", features = ["full"] }
prost = "0.13.5"
nix = { version = "0.30.1", features = ["signal"] }
axum = "0.8.3"
serde = { version="1.0.219", features = ["derive"] }
tracing="0.1"
tracing-subscriber = "0.3.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1.17"
async-trait = "0.1.88"

[build-dependencies]
tonic-build = "0.13"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
