[package]
name = "clis"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
runtime = { workspace = true }
utils = { workspace = true }
anyhow = { workspace = true }
tokenizers = { workspace = true, features = ["http"] }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing={ workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing-futures = { workspace = true }
rand = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
