[package]
name = "gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "api_server"
path = "src/main.rs"

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
tokenizers = { workspace = true, features = ["http"] }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing={ workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
uuid= { workspace = true, features = ["v4"] }

[build-dependencies]
tonic-build = { workspace = true }
