[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
llmserve = { path = "../llmserve" }
api_server = { path = "../api_server" }
tokio = { version = "1", features = ["signal"] }
prost = "0.12"
clap = { version = "4.0", features = ["derive"] }
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing="0.1"
tracing-subscriber = "0.3.0"
