[package]
name = "llmserve"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llmserve"
path = "src/api_server.rs"

[dependencies]
anyhow = "1.0.98"
tokenizers = { version = "0.20", features = ["http"] }
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
prost = "0.12"
nix = { version = "0.30.1", features = ["signal"] }
axum = "0.8.3"
serde = { version="1.0.219", features = ["derive"] }
tracing="0.1"
tracing-subscriber = "0.3.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
