[package]
name = "runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
utils = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing={ workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
once_cell = "1.21.3"
rand.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
