[package]
name = "lmserve-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "runtime"
path = "src/lib.rs"

[dependencies]
lmserve-utils = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing={ workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
once_cell = "1.21.3"
rand.workspace = true
strum = "0.27.1"
strum_macros = "0.27.1"
tower = "0.5.2"
hyper-util = "0.1.15"
linked_hash_set = "0.1.5"
async-nats = "0.42.0"
serde_json.workspace = true
tokio-util = "0.7.16"
clap.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
