[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
tracing="0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tokio = { version = "1", features = ["signal"] }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
