[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
tracing={ workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["signal"] }
uuid= { workspace = true, features = ["v4"] }
hf-hub = "0.4.3"
tokenizers = { workspace = true, features = ["http"] }
