[package]
name = "llm_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing={ workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
ahash = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
