[package]
name = "llm_srv"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "llm_srv"
path = "src/main.rs"

[dependencies]
llm_engine = { workspace = true }
utils = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing={ workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tracing-futures = { workspace = true }
rand = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
