[build-system]
requires = ["setuptools>=64", "grpcio-tools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_worker"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "typer>=0.15.4",
    "loguru>=0.7.3",
    "torch>=2.4.0",
    "numpy>=2.2.0",
    "transformers<5",
    "flashinfer-python>=0.2.5",
    "hf-xet>=1.1.2",
    "pycuda>=2025.1",
    "nixl>=0.3.0",
    "yapf==0.43.0",
]

[project.scripts]
llm-worker = "llm_worker.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_worker*"]
